crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A vector of bits
 *
 * # Examples
 * ```C
 * SPBitVec vec = sp_bit_vec_new(8);
 * sp_bit_vec_set(vec, 5, true);
 * sp_bit_vec_free(vec);
 * ```
 */
typedef struct SPBitVec SPBitVec;
/**
 * A grid containing brightness values.
 *
 * # Examples
 * ```C
 * SPConnection connection = sp_connection_open("127.0.0.1:2342");
 * if (connection == NULL)
 *     return 1;
 *
 * SPBrightnessGrid grid = sp_brightness_grid_new(2, 2);
 * sp_brightness_grid_set(grid, 0, 0, 0);
 * sp_brightness_grid_set(grid, 1, 1, 10);
 *
 * SPCommand command = sp_command_char_brightness(grid);
 * sp_connection_free(connection);
 * ```
 */
typedef struct SPBrightnessGrid SPBrightnessGrid;
/**
 * Represents a span of memory (`&mut [u8]` ) as a struct usable by C code.
 *
 * You should not create an instance of this type in your C code.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - accesses to the memory pointed to with `start` is never accessed outside `length`
 * - the lifetime of the `CByteSlice` does not outlive the memory it points to, as described in
 *   the function returning this type.
 * - an instance of this created from C is never passed to a consuming function, as the rust code
 *   will try to free the memory of a potentially separate allocator.
 */
typedef struct SPByteSlice {
    /**
     * The start address of the memory
     */
    uint8_t *start;
    /**
     * The amount of memory in bytes
     */
    size_t length;
} SPByteSlice;
/**
 * Clones a `SPBrightnessGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_free`.
 */
struct SPBrightnessGrid *sp_brightness_grid_clone(const struct SPBrightnessGrid *this_);
/**
 * Sets the value of all cells in the `SPBrightnessGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `value`: the value to set all cells to
 *
 * # Panics
 *
 * - When providing an invalid brightness value
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 * - `this` is not written to or read from concurrently
 */
void sp_brightness_grid_fill(struct SPBrightnessGrid *this_, uint8_t value);
/**
 * Deallocates a `SPBrightnessGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `SPCommand`
 */
void sp_brightness_grid_free(struct SPBrightnessGrid *this_);
/**
 * Gets the current value at the specified position.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `x` and `y`: position of the cell to read
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 * - `this` is not written to concurrently
 */
uint8_t sp_brightness_grid_get(const struct SPBrightnessGrid *this_,
                               size_t x,
                               size_t y);
/**
 * Gets the height of the `SPBrightnessGrid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 */
size_t sp_brightness_grid_height(const struct SPBrightnessGrid *this_);
/**
 * Loads a `SPBrightnessGrid` with the specified dimensions from the provided data.
 *
 * # Panics
 *
 * When the provided `data_length` is not sufficient for the `height` and `width`
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length`
 *   bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_free`.
 */
struct SPBrightnessGrid *sp_brightness_grid_load(size_t width,
                                                 size_t height,
                                                 const uint8_t *data,
                                                 size_t data_length);
/**
 * Creates a new `SPBrightnessGrid` with the specified dimensions.
 *
 * returns: `SPBrightnessGrid` initialized to 0. Will never return NULL.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_brightness_grid_free`.
 */
struct SPBrightnessGrid *sp_brightness_grid_new(size_t width,
                                                size_t height);
/**
 * Sets the value of the specified position in the `SPBrightnessGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `x` and `y`: position of the cell
 * - `value`: the value to write to the cell
 *
 * returns: old value of the cell
 *
 * # Panics
 *
 * - When accessing `x` or `y` out of bounds.
 * - When providing an invalid brightness value
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_brightness_grid_set(struct SPBrightnessGrid *this_,
                            size_t x,
                            size_t y,
                            uint8_t value);
/**
 * Gets an unsafe reference to the data of the `SPBrightnessGrid` instance.
 *
 * ## Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 * - the returned memory range is never accessed after the passed `SPBrightnessGrid` has been freed
 * - the returned memory range is never accessed concurrently, either via the `SPBrightnessGrid` or directly
 */
struct SPByteSlice sp_brightness_grid_unsafe_data_ref(struct SPBrightnessGrid *this_);
/**
 * Gets the width of the `SPBrightnessGrid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPBrightnessGrid`
 */
size_t sp_brightness_grid_width(const struct SPBrightnessGrid *this_);